# printer-scraper-usb-tauri

./: .gitignore  cab_files_list.txt  move-binary.js  package.json  performance_monitor_template.xml  postcss.config.js  printer-scraper-config.json  printer-scraper-update-manifest.json  printer-scraper-usb-update-manifest.json  printer_scraper_usb.key  printer_scraper_usb.key.pub  rollup.config.js  tailwind.config.js
public/: index.html
src/: App.svelte  TailwindCSS.svelte  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: counter.json  performance_monitor_template.xml  printer-scraper-config.json  printer_scraper_task.xml  printer_scraper_upload.xml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ExecuteCommand.svelte  GetLocalPrinters.svelte
