[package]
authors = ["rogelioisael@hotmail.com"]
default-run = "app"
description = "Printer Scraper USB"
edition = "2018"
license = "GPL-3.0 License"
name = "app"
repository = "https://github.com/isaelfeliciano/printer-scraper-usb-tauri"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.0.0-rc.4", features = [] }

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = {version = "1.0.0-rc.4", features = ["api-all", "cli"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
